--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 	path = adventofcode2021
 	url = https://github.com/ColeTrammer/adventofcode2021.git
 [submodule "iros"]
-	path = iros
+	path = deps/iros
 	url = https://github.com/ColeTrammer/iros.git
