--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,6 @@ project(AdventOfCode CXX)
 add_subdirectory(deps/iros)
 
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/*.cpp")
-add_executable(aoc
-    ${sources}
-)
+add_executable(aoc ${sources})
 target_include_directories(aoc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(aoc PRIVATE Di::di Dius::dius)
