--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/*.cpp")
 add_executable(aoc ${sources})
 target_include_directories(aoc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(aoc PRIVATE Di::di Dius::dius)
+target_precompile_headers(aoc PRIVATE [["runner/aliases.h"]]
+                          [["runner/aoc_problem_registry.h"]])
